CHANGELOG RoundCube Webmail
---------------------------

2008/10/22 (alec)
----------
- Added option focus_on_new_message (#1485374)

2008/10/18 (alec)
----------
- Fix html2text class autoloading on Windows (#1485505)
- Fix html signature formatting when identity save error occured (#1485426)

2008/10/15 (alec)
----------
- Add feedback and set busy when moving folder (#1485497)

2008/10/10 (alec)
----------
- Fix 'Empty' link visibility for some languages e.g. Slovak (#1485489)
- Fix messages count bar overlapping (#1485270)
- Fix adding signature in drafts compose mode (#1485484)

2008/10/09 (alec)
----------
- Fix iil_C_Sort() to support very long and/or divided responses (#1485283)
- Fix matching case sensitivity when setting identity on reply (#1485480)
- Prefer default identity on reply

2008/10/08 (alec)
----------
- Fix imap searching on ISMail server (#1485466)
- Add css class for flagged messages (#1485464)

2008/10/07 (alec)
----------
- Write username instead of id in sendmail log (#1485477)
- Fix htmlspecialchars() use for PHP version < 5.2.3 (#1485475)
- Fix js keywords escaping in json_serialize() for IE/Opera (#1485472)
- Added bin/killcache.php script (#1485434)

2008/10/03 (alec)
----------
- Add support for SJIS, GB2312, BIG5 in rc_detect_encoding()
- Fix vCard file encoding detection for non-UTF-8 strings (#1485410)
- Add 'skip_deleted' option in User Preferences (#1485445)

2008/10/02 (alec)
----------
- Minimize "inline" javascript scripts use (#1485433)
- Fix css class setting for folders with names matching defined classes names (#1485355)
- Fix race conditions when changing mailbox

2008/10/01 (alec)
- Fix spellchecking when switching to html editor (#1485362)
- Fix compose window width/height (#1485396)
- Allow calling msgimport.sh/msgexport.sh from any directory (#1485431)
- Localized filesize units (#1485340)
- Better handling of "no identity" and "no email in identity" situations (#1485117)

2008/09/29 (alec)
----------