@@ -285,8 +285,12 @@ $rcmail_config['address_book_type'] = 'sql';
 // don't allow these settings to be overriden by the user
 $rcmail_config['dont_override'] = array();
 
-// allow users to add and delete sender identities
-$rcmail_config['multiple_identities'] = true;
+// Set identities access level:
+// 0 - many identities with possibility to edit all params
+// 1 - many identities with possibility to edit all params but not email address
+// 2 - one identity with possibility to edit all params
+// 3 - one identity with possibility to edit all params but not email address
+$rcmail_config['identities_level'] = 0;
 
 // try to load host-specific configuration
 // see http://trac.roundcube.net/wiki/Howto_Config for more details
